--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,9 +1,9 @@
 <%- include('inc/header') %>
 
 <div class="columns is-mobile is-centered">
-    <div class="column is-half">
+    <div class="column is-half form-bg">
         <div>
-            <h1 class="title is-1"> 🤦 404 Error!</h1>
+            <h1 class="title is-1 index-h1"> 🤦 404 Error!</h1>
             <p class="subtitle is-4 m-t-50">
                 Sorry! The page you've come to doesn't exist. Please let us know <a href="/contact">here</a>.
             </p>
