--- a/views/community.ejs
+++ b/views/community.ejs
@@ -1,7 +1,7 @@
 <%- include('inc/header')  %>
 
 <div class="columns is-mobile is-centered">
-    <div class="column is-half">
+    <div class="column is-half form-bg">
         <div>
             <h1 class="title is-1"> 💬 Join our Community!</h1>
             <p class="subtitle is-4 m-t-50">
