--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,17 +2,18 @@
 
 <div class="columns is-mobile is-centered">
     <div class="column is-half">
-        <div>
-            <h1 class="title is-1"> 📧 Contact Us </h1>
-            <p class="subtitle is-4 m-t-50">
-                We ❤️ to hear from you. You can use the form below to get in touch or email us on hello@domain.com
-            </p>
-        </div> <!-- intro-->
+        
     </div>
 </div>
 
 <div class="columns is-mobile is-centered">
-    <div class="column is-mobile is-half">
+    <div class="column is-mobile is-half form-bg">
+        <div>
+            <h1 class="title is-1 index-h1"> 📧 Contact Us </h1>
+            <p class="subtitle is-4 m-t-50">
+                We ❤️ to hear from you. You can use the form below to get in touch or email us on hello@domain.com
+            </p>
+        </div> <!-- intro-->
         <div class="field">
             <label class="label">Name</label>
             <div class="control has-icons-left">
