--- a/public/css/main.css
+++ b/public/css/main.css
@@ -292,8 +292,7 @@ body {
   background-color: #f9f9f9; }
 
 .navbar {
-  padding: 20px;
-  background-color: #f9f9f9; }
+  background: #f9f9f9; }
 
 p {
   color: black;
@@ -309,19 +308,26 @@ h6 {
   color: black;
   font-family: 'Bree Serif', serif; }
 
+h1 {
+  border-bottom: 8px solid lightcoral; }
+
+.index-h1 {
+  width: 50%; }
+
 .button {
   box-shadow: 3px 3px 0px lightgrey; }
 
-.navbar-divider {
-  background-color: #bababa;
-  width: 75%; }
+.listing-divider {
+  background-color: lightcoral;
+  height: 3px;
+  width: 50%; }
 
 .listing {
   background-color: #fff;
   display: block;
   border-radius: 3px;
   box-shadow: 3px 3px 0px #005b96;
-  margin-top: 10px;
+  margin-top: 20px;
   padding: 10px; }
 
 .sidebar {
@@ -332,12 +338,12 @@ h6 {
   box-shadow: 3px 3px 0px lightcoral; }
 
 .form-bg {
-  background-color: #fafafa;
+  background-color: #fff;
   display: block;
   height: 75%;
   padding: 30px;
   border-radius: 3px;
-  box-shadow: 3px 3px 0px #bababa; }
+  box-shadow: 3px 3px 0px lightcoral; }
 
 body {
   display: flex;
