--- a/views/500.ejs
+++ b/views/500.ejs
@@ -1,9 +1,9 @@
 <%- include('inc/header') %>
 
 <div class="columns is-mobile is-centered">
-    <div class="column is-half">
+    <div class="column is-half form-bg">
         <div>
-            <h1 class="title is-1">🚨 500 Error!</h1>
+            <h1 class="title is-1 index-h1">🚨 500 Error!</h1>
             <p class="subtitle is-4 m-t-50">
                 Sorry! There was a server error 😩. If the problem persists please let us know<a href="/contact"> here</a>.
             </p>
