--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
             <div class="columns is-mobile">
                 <div class="column is-three-quarters p-l-75 p-r-20">
                     <div>
-                        <h1 class="title is-1">Job Board Site Title</h1>
+                        <h1 class="title is-1 index-h1">Job Board Site Title</h1>
                         <p class="subtitle is-4 m-t-50">
                             👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so
                             will be great in helping you candidates grow in their first role 🎉.
@@ -68,7 +68,7 @@
                                             <span class="is-size-4">👩‍💻👨‍💻</span> Javascript Developer<br>
                                         </p>
                                     </div>
-                                    <hr class="navbar-divider">
+                                    <hr class="listing-divider">
                                     <h4 class="is-size-4 m-b-5">About the Company</h4>
                                     <p>
                                         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
