Candidate and hirer dashboards complete

--- a/views/candidate/dashboard.ejs
+++ b/views/candidate/dashboard.ejs
@@ -4,7 +4,7 @@
         <div class="columns is-mobile">
             <div class="column is-three-quarters p-l-75 p-r-20">
                 <div>
-                    <h1 class="title is-1 index-h1">👋 $name</h1>
+                    <h1 class="title is-1 index-h1">👋 $company name</h1>
                     <p class="subtitle is-4 m-t-50">
                             🗄 Track your saved and applied jobs below.
                     </p>
@@ -50,10 +50,11 @@
                         </figure>
                         <div class="media-content">
                             <div class="content">
-                                <p class="is-size-5">
-                                    <strong class="is-size-4"> 💼 Company Name</strong><span class="m-l-20 m-r-10 is-size-4">🗺</span>Location<br>
+                                <strong class="is-size-4"> 💼 Company Name</strong>
+                                    <span class="m-l-10 is-size-4">🗺</span>Location
+                                    <span class="m-l-10 is-size-4">💵</span> $30,000
+                                    <br>
                                     <span class="is-size-4">👩‍💻👨‍💻</span> Javascript Developer<br>
-                                </p>
                             </div>
                             <p class="is-pulled-left button is-text">Details</p>
                             <nav class="level is-mobile is-pulled-right">
@@ -79,7 +80,10 @@
                         <div class="media-content">
                             <div class="content">
                                 <p class="is-size-5">
-                                    <strong class="is-size-4"> 💼 Company Name</strong><span class="m-l-20 m-r-10 is-size-4">🗺</span>Location<br>
+                                    <strong class="is-size-4"> 💼 Company Name</strong>
+                                    <span class="m-l-10 is-size-4">🗺</span>Location
+                                    <span class="m-l-10 is-size-4">💵</span> $30,000
+                                    <br>
                                     <span class="is-size-4">👩‍💻👨‍💻</span> Javascript Developer<br>
                                 </p>
                             </div>
@@ -111,7 +115,7 @@
                         <div class="media">
                             <div class="media-content">
                                 <p class="title is-5">💼 Company Name</p>
-                                <p class="subtitle is-6">🗺 Location</p>
+                                <p class="subtitle is-6">🗺 Location 💵 $30, 000</p>
                             </div>
                         </div>
 
@@ -131,7 +135,7 @@
                         <div class="media">
                             <div class="media-content">
                                 <p class="title is-5">💼 Company Name</p>
-                                <p class="subtitle is-6">🗺 Location</p>
+                                <p class="subtitle is-6">🗺 Location 💵 $30, 000</p>
                             </div>
                         </div>
 
