--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,10 @@
                                 <div class="media-content">
                                     <div class="content">
                                         <p class="is-size-5">
-                                            <strong class="is-size-4"> 💼 Company Name</strong><span class="m-l-20 m-r-10 is-size-4">🗺</span>Location<br>
+                                            <strong class="is-size-4"> 💼 Company Name</strong>
+                                            <span class="m-l-10 is-size-4">🗺</span>Location
+                                            <span class="m-l-10 is-size-4">💵</span> $30,000
+                                            <br>
                                             <span class="is-size-4">👩‍💻👨‍💻</span> Javascript Developer<br>
                                         </p>
                                     </div>
@@ -64,7 +67,10 @@
                                 <div class="media-content">
                                     <div class="content">
                                         <p class="is-size-5">
-                                            <strong class="is-size-4"> 💼 Company Name</strong><span class="m-l-20 m-r-10 is-size-4">🗺</span>Location<br>
+                                            <strong class="is-size-4"> 💼 Company Name</strong>
+                                            <span class="m-l-10 is-size-4">🗺</span>Location
+                                            <span class="m-l-10 is-size-4">💵</span> $30,000
+                                            <br>
                                             <span class="is-size-4">👩‍💻👨‍💻</span> Javascript Developer<br>
                                         </p>
                                     </div>
