--- a/views/hirer/dashboard.ejs
+++ b/views/hirer/dashboard.ejs
@@ -1,6 +1,120 @@
-<%- include('../inc/header') %>
+<%- include('inc/header') %>
 
+    <section>
+        <div class="columns is-mobile">
+            <div class="column is-three-quarters p-l-75 p-r-20">
+                <div>
+                    <h1 class="title is-1 index-h1">👋 $company name</h1>
+                    <p class="subtitle is-4 m-t-50">
+                        💼 Keep track of your listed jobs and applications.
+                    </p>
+                </div> <!-- intro-->
 
+                <div class="m-t-50"></div>
 
+                <div class="tabs is-toggle is-centered m-t-30">
+                    <ul>
+                        <li class="is-active">
+                            <a>
+                                <span>❤️ Applications</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <span>📝 Jobs Listed</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
 
-<%- include('../inc/footer') %>
+                <div class="listing">
+                    <article class="media p-t-10 p-l-10">
+                        <div class="media-content">
+                            <div class="content">
+                                <p class="is-size-5">
+                                    <strong class="is-size-4"><span class="is-size-4">👩‍💻👨‍💻</span> Candidate Name</strong>
+                                    <br>
+                                    <strong>Job Applied For: </strong>
+                                    Javascript Developer
+                                    <span class="m-l-10 is-size-4">🗺</span>Location
+                                    <span class="m-l-10 is-size-4">💵</span> $30,000
+                                </p>
+                            </div>
+                            
+                            <nav class="level is-mobile is-pulled-right">
+                                <div class="level-left">
+                                    <p class="is-pulled-left button is-text m-r-10">Details</p>
+                                    <a class="level-item button is-link"><i class="fas fa-eye m-r-5"></i>View Profile</a>
+                                    <a class="level-item">
+                                        <span class="icon is-small"></i></span>
+                                    </a>
+                                </div>
+                            </nav>
+                        </div>
+                    </article>
+                </div><!-- application received-->
+
+                <div class="listing">
+                    <article class="media p-t-10 p-l-10">
+                        <div class="media-content">
+                            <div class="content">
+                                <p class="is-size-5">
+                                    <span class="is-size-4">👩‍💻👨‍💻</span>
+                                    <strong>Javascript Developer</strong>
+                                    <span class="m-l-10 is-size-4">🗺</span>Location
+                                    <span class="m-l-10 is-size-4">💵</span> $30,000
+                                </p>
+                            </div>
+                            
+                            <nav class="level is-mobile is-pulled-right">
+                                <div class="level-left">
+                                    <p class="is-pulled-left button is-text m-r-10">Details</p>
+                                    <a class="level-item button is-link"><i class="fas fa-edit m-r-5"></i>Edit</a>
+                                    <a class="level-item">
+                                        <span class="icon is-small"></i></span>
+                                    </a>
+                                </div>
+                            </nav>
+                        </div>
+                    </article>
+                </div><!-- job listing-->
+                
+            </div> <!-- first column-->
+
+            <div class="column sidebar m-r-50">
+                <a class="button is-large is-fullwidth is-success m-t-20 m-b-20"><i class="fas fa-plus-circle m-r-10"></i>Add New Job</a>
+
+                <h3 class="title is-3">New Candidates</h1>
+
+                <div class="card m-t-10">
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content">
+                                <p class="title is-5">👨‍💻 Joe Bloggs</p>
+                                <p>some intro text</p>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- candidate 1 -->
+
+                <div class="card m-t-10">
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content">
+                                <p class="title is-5">👩‍💻 Jenny Bloggs</p>
+                                <p>some intro text</p>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- candidate 2 -->
+
+                <h3 class="title is-3 m-t-30">Sponsored</h1>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English
+                </p>
+
+            </div> <!-- sidebar -->
+        </div> <!--main columns-->
+    </section><!-- main body-->
+</main>
+<%- include('inc/footer') %>
