Changed footer colour

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -114,7 +114,8 @@ body {
   width: 100%;
   left: 0;
   bottom: 0;
-  background: #F46197;
+  background: #005b96;
+  border-top: 5px solid lightcoral;
   height: 50px;
 }
 
