Added routes for profiles on candidate and hirer, finished candidate profile-view page

--- a/views/hirer/dashboard.ejs
+++ b/views/hirer/dashboard.ejs
@@ -1,4 +1,4 @@
-<%- include('inc/header') %>
+<%- include('../inc/header') %>
 
     <section>
         <div class="columns is-mobile">
@@ -117,4 +117,4 @@
         </div> <!--main columns-->
     </section><!-- main body-->
 </main>
-<%- include('inc/footer') %>
+<%- include('../inc/footer') %>
