--- a/views/inc/footer.ejs
+++ b/views/inc/footer.ejs
@@ -3,12 +3,12 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <div id="typo" class="bd-typo">
-                <p class="has-text-grey-light">  
-                    Crafted with ❤️ by <a href="">@lawyerscode</a> && <a href="">Irshad</a>
-                </p>
                 <a href="https://bulma.io/made-with-bulma/">
                     <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
                 </a>
+                <p class="has-text-grey-light m-t-10">  
+                    Crafted with ❤️ by <a href="">@lawyerscode</a> && <a href="">Irshad</a>
+                </p>
             </div>
         </div>
     </footer>
