--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -65,7 +65,7 @@
                             <div class="navbar-item has-dropdown is-hoverable ">
                                 <a class="navbar-link "><i class="fas fa-user-circle fa-lg m-r-5"></i>Profile</a>
                                 <div class="navbar-dropdown is-right">
-                                    <a class="navbar-item" href="#"><i class="fas fa-tachometer-alt m-r-5 fa-lg"></i>Dashboard</a>
+                                    <a class="navbar-item" href="/dashboard"><i class="fas fa-tachometer-alt m-r-5 fa-lg"></i>Dashboard</a>
                                     <a class="navbar-item"><i class="fas fa-user m-r-5 fa-lg "></i>Manage Profile</a>
                                     <hr class="navbar-divider">
                                     <form action="/logout" method="POST">
