--- a/public/css/main.css
+++ b/public/css/main.css
@@ -311,6 +311,9 @@ h6 {
 h1 {
   border-bottom: 8px solid lightcoral; }
 
+.profile-h1 {
+  border-bottom: none; }
+
 .index-h1 {
   width: 50%; }
 
