--- a/views/candidate/dashboard.ejs
+++ b/views/candidate/dashboard.ejs
@@ -1,4 +1,4 @@
-<%- include('inc/header') %>
+<%- include('../inc/header') %>
 
     <section>
         <div class="columns is-mobile">
@@ -60,7 +60,7 @@
                             <nav class="level is-mobile is-pulled-right">
                                 <div class="level-left">
                                     <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Save</a>
-                                    <a class="level-item button is-success"><i class="fas fa-pen m-r-5"></i>Apply</a>
+                                    <a class="level-item button"><i class="fas fa-pen m-r-5"></i>Applied</a>
                                     <a class="level-item">
                                         <span class="icon is-small"></i></span>
                                     </a>
@@ -90,7 +90,7 @@
                             <p class="is-pulled-left button is-text">Details</p>
                             <nav class="level is-mobile is-pulled-right">
                                 <div class="level-left">
-                                    <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Save</a>
+                                    <a class="level-item button is-danger"><i class="fas fa-heart m-r-5"></i>Saved</a>
                                     <a class="level-item button is-success"><i class="fas fa-pen m-r-5"></i>Apply</a>
                                     <a class="level-item">
                                         <span class="icon is-small"></i></span>
@@ -154,4 +154,4 @@
         </div> <!--main columns-->
     </section><!-- main body-->
 </main>
-<%- include('inc/footer') %>
+<%- include('../inc/footer') %>
