--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,14 @@ body {
   background: #f9f9f9;
 }
 
+.profile-menu {
+  font-size: 20px;
+}
+
+.profile-dropdown {
+  font-size: 18px;
+}
+
 //paragraph
 p {
   color: black;
