--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -57,10 +57,10 @@
                 <nav class="navbar" role="navigation" aria-label="dropdown navigation">
                     <div class="navbar-menu">
                         <div class="navbar-end p-r-15">
-                            <div class="navbar-item has-dropdown is-hoverable ">
-                                <a class="navbar-link "><i class="fas fa-user-circle fa-lg m-r-5"></i>Profile</a>
-                                <div class="navbar-dropdown is-right">
-                                    <a class="navbar-item" href="/dashboard"><i class="fas fa-tachometer-alt m-r-5 fa-lg"></i>Dashboard</a>
+                            <div class="navbar-item has-dropdown is-hoverable">
+                                <a class="navbar-link"><i class="fas fa-user-circle fa-2x m-r-5"></i><span class="profile-menu"><%= user.firstName %></span></a>
+                                <div class="navbar-dropdown profile-dropdown is-right">
+                                    <a class="navbar-item p-t-5 p-b-5" href="/dashboard"><i class="fas fa-tachometer-alt m-r-5 fa-lg"></i>Dashboard</a>
                                     <a class="navbar-item" href="/profile"><i class="fas fa-user m-r-5 fa-lg "></i>Manage Profile</a>
                                     <hr class="navbar-divider">
                                     <form action="/logout" method="POST">
