--- a/sass/main.scss
+++ b/sass/main.scss
@@ -74,6 +74,11 @@ h1 {
   box-shadow: 3px 3px 0px lightgrey;
 }
 
+.fa-file {
+  color: lightblue;
+  font-size: 28px;
+}
+
 //divider
 .listing-divider {
   background-color: lightcoral;
