--- a/views/candidate/dashboard.ejs
+++ b/views/candidate/dashboard.ejs
@@ -4,7 +4,7 @@
         <div class="columns is-mobile">
             <div class="column is-three-quarters p-l-75 p-r-20">
                 <div>
-                    <h1 class="title is-1 index-h1">👋 $company name</h1>
+                    <h1 class="title is-1 index-h1">👋 <%= user.firstName %> </h1>
                     <p class="subtitle is-4 m-t-50">
                             🗄 Track your saved and applied jobs below.
                     </p>
