--- a/views/hirer/profile.ejs
+++ b/views/hirer/profile.ejs
@@ -8,7 +8,7 @@
                 <h1 class="title is-1 profile-h1"> <%=user.firstName +' ' + user.lastName %></h1>
             </div>
             <div class="column">
-                <a class="button is-mediums is-link is-pulled-right"><i class="fas fa-edit m-r-10"></i>Edit Profile</a>
+                <a class="button is-link is-pulled-right"><i class="fas fa-edit m-r-10"></i>Edit Profile</a>
             </div>
         </div>
 
@@ -17,25 +17,11 @@
                 <div class="tile">
                 <div class="tile is-parent is-vertical">
                     <article class="tile is-child notification is-primary">
-                    <p class="title is-size-4">🏢 Company Details</p>
-                    <p class="subtitle">
-                        <strong>Email Address:</strong> <%= user.email %>
-                        <strong>Password:</strong> Hidden
-                    </p>
-                    <div class="file is-pulled-right">
-                        <label class="file-label">
-                            <input class="file-input" type="file" name="resume">
-                            <span class="file-cta">
-                            <span class="file-icon">
-                                <i class="fas fa-upload"></i>
-                            </span>
-                            <span class="file-label">
-                                Upload New Resume
-                            </span>
-                            </span>
-                        </label>
-                    </div>
-                    
+                        <p class="title is-size-4">🏢 Company Details</p>
+                        <p class="subtitle">
+                            <strong>Email Address:</strong> <%= user.email %>
+                            <strong>Password:</strong> Hidden
+                        </p>
                     </article>
                 </div>
                 
