Upload logo option added in hirer/edit view

--- a/views/hirer/editProfile.ejs
+++ b/views/hirer/editProfile.ejs
@@ -104,6 +104,23 @@
             </div>
         </div>
 
+         <div class="field">
+            <label class="label">Company Logo</label>
+            <div class="file m-t-15">
+                <label class="file-label">
+                    <input class="file-input" type="file" name="resume">
+                    <span class="file-cta">
+                    <span class="file-icon">
+                        <i class="fas fa-upload"></i>
+                    </span>
+                    <span class="file-label">
+                        Upload Logo
+                    </span>
+                    </span>
+                </label>
+            </div>
+        </div>
+
          <div class="columns">    
             <div class="column">
                 <a class="button is-success is-pulled-right m-t-10"><i class="fas fa-save m-r-10"></i>Save Changes</a>
