--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,20 +105,12 @@
 
                 </div> <!-- first column-->
 
-                <div class="column sidebar m-r-50">
-                    <a class="button is-large is-fullwidth is-primary m-t-20 m-b-20">Post a Job</a>
-                    <p>👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so will
-                    be great in helping you candidates grow in their first role 🎉.</p>
-                    <h4 class="title is-4 p-t-20">Post a Job</h4>
-                    <p>👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so
-                        will
-                        be great in helping you candidates grow in their first role 🎉.</p>
-
-                    <h4 class="title is-4 p-t-20">Post a Job</h4>
-                    <p>👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so
-                        will
-                        be great in helping you candidates grow in their first role 🎉.</p>
-                </div>
+                <% if(locals.user === 'hirer') { %>
+                    <%- include('inc/hirer-sidebar') %>
+                <% } else { %>
+                    <%- include('inc/candidate-sidebar') %>
+                <% } %>
+            
             </div> <!--main columns-->
     </section><!-- main body-->
 </main>
