Seperate sidebars for default, candidate && hirer.

--- a/views/candidate/dashboard.ejs
+++ b/views/candidate/dashboard.ejs
@@ -103,54 +103,8 @@
                 
             </div> <!-- first column-->
 
-            <div class="column sidebar m-r-50">
-                <h3 class="title is-3">Spotlight</h1>
-               <div class="card m-t-10">
-                    <div class="card-image">
-                        <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-5">💼 Company Name</p>
-                                <p class="subtitle is-6">🗺 Location 💵 $30, 000</p>
-                            </div>
-                        </div>
+            <%- include('../inc/candidate-sidebar') %>
 
-                        <div class="content">
-                            <p>👩‍💻👨‍💻 Javascript Developer.</p>
-                        </div>
-                    </div>
-                </div><!-- company 1 -->
-
-                <div class="card m-t-10">
-                    <div class="card-image">
-                        <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-5">💼 Company Name</p>
-                                <p class="subtitle is-6">🗺 Location 💵 $30, 000</p>
-                            </div>
-                        </div>
-
-                        <div class="content">
-                            <p>👩‍💻👨‍💻 Javascript Developer.</p>
-                        </div>
-                    </div>
-                </div><!-- company 2 -->
-
-                <h3 class="title is-3 m-t-30">Sponsored</h1>
-                <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English
-                </p>
-
-            </div> <!-- sidebar -->
         </div> <!--main columns-->
     </section><!-- main body-->
 </main>
