--- a/views/candidate/register.ejs
+++ b/views/candidate/register.ejs
@@ -2,9 +2,9 @@
 
 <div class="columns is-mobile is-centered m-t-30">
     <div class="column is-half is-mobile form-bg ">
-            <h1 class="title is-1">👋 Great to have you on board</h1>
+            <h1 class="title is-1">Register as a Job Seeker</h1>
             <p class="subtitle is-4 m-t-50">
-                Just fill out a few details so we can start working towards gettin you in your new job. 💻
+                Just fill out a few details so we can start working towards getting you in your new job. 💻
             </p>
           <form class="m-t-30" action="/candidate/register" method="POST">
             <div class="field columns">
