--- a/views/hirer/register.ejs
+++ b/views/hirer/register.ejs
@@ -2,7 +2,7 @@
 
 <div class="columns is-mobile is-centered m-t-30">
     <div class="column is-half is-mobile form-bg ">
-            <h1 class="title is-1">👋 Thanks for doing this!</h1>
+            <h1 class="title is-1">Register as a Hirer</h1>
             <p class="subtitle is-4 m-t-50">
                 You're help changing the face of tech. So thank you, thank you and ❤️ ❤️ ❤️ ❤️
             </p>
