--- a/views/hirer/dashboard.ejs
+++ b/views/hirer/dashboard.ejs
@@ -81,39 +81,7 @@
                 
             </div> <!-- first column-->
 
-            <div class="column sidebar m-r-50">
-                <a class="button is-large is-fullwidth is-success m-t-20 m-b-20"><i class="fas fa-plus-circle m-r-10"></i>Add New Job</a>
-
-                <h3 class="title is-3">New Candidates</h1>
-
-                <div class="card m-t-10">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-5">👨‍💻 Joe Bloggs</p>
-                                <p>some intro text</p>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- candidate 1 -->
-
-                <div class="card m-t-10">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-5">👩‍💻 Jenny Bloggs</p>
-                                <p>some intro text</p>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- candidate 2 -->
-
-                <h3 class="title is-3 m-t-30">Sponsored</h1>
-                <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English
-                </p>
-
-            </div> <!-- sidebar -->
+            <%- include('../inc/hirer-sidebar') %>
         </div> <!--main columns-->
     </section><!-- main body-->
 </main>
