--- a/views/inc/default-sidebar.ejs
+++ b/views/inc/default-sidebar.ejs
@@ -1,7 +1,5 @@
 <div class="column sidebar m-r-50">
-
-candidate
-    <a class="button is-large is-fullwidth is-primary m-t-20 m-b-20">Post a Job</a>
+    <a class="button is-large is-fullwidth is-primary m-t-20 m-b-20"><i class="fas fa-plus-circle m-r-10"></i>Post a Job</a>
     <p>👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so will
     be great in helping you candidates grow in their first role 🎉.</p>
     <h4 class="title is-4 p-t-20">Post a Job</h4>
