--- a/views/inc/hirer-sidebar.ejs
+++ b/views/inc/hirer-sidebar.ejs
@@ -1,14 +1,35 @@
 <div class="column sidebar m-r-50">
-    <a class="button is-large is-fullwidth is-primary m-t-20 m-b-20">Post a Job</a>
-    <p>👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so will
-    be great in helping you candidates grow in their first role 🎉.</p>
-    <h4 class="title is-4 p-t-20">Post a Job</h4>
-    <p>👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so
-        will
-        be great in helping you candidates grow in their first role 🎉.</p>
+    <a class="button is-large is-fullwidth is-success m-t-20 m-b-20"><i class="fas fa-plus-circle m-r-10"></i>Add New Job</a>
 
-    <h4 class="title is-4 p-t-20">Post a Job</h4>
-    <p>👋 Our mission is to help people new to tech in to their first jobs. Our partner companies are newbie-friendly so
-        will
-        be great in helping you candidates grow in their first role 🎉.</p>
-</div>
+    <h3 class="title is-3">New Candidates</h1>
+
+    <div class="card m-t-10">
+        <div class="card-content">
+            <div class="media">
+                <div class="media-content">
+                    <p class="title is-5">👨‍💻 Joe Bloggs</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <p class="is-pulled-right button is-success m-t-10"><i class="fas fa-user m-r-5"></i>View Candidate</p>
+                </div>
+            </div>
+        </div>
+    </div><!-- candidate 1 -->
+
+    <div class="card m-t-10">
+        <div class="card-content">
+            <div class="media">
+                <div class="media-content">
+                    <p class="title is-5">👩‍💻 Jenny Bloggs</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <p class="is-pulled-right button is-success m-t-10"><i class="fas fa-user m-r-5"></i>View Candidate</p>
+                </div>
+            </div>
+        </div>
+    </div><!-- candidate 2 -->
+
+    <h3 class="title is-3 m-t-30">Sponsored</h1>
+    <p>
+        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English
+    </p>
+
+</div> <!-- sidebar -->
