Added slack to community page and also updated ui

--- a/views/community.ejs
+++ b/views/community.ejs
@@ -9,28 +9,28 @@
             </p>
 
             <div class="columns is-mobile m-t-30">
-                <div class="notification column is-two-fifths m-r-10">
+                <div class="column is-two-fifths m-r-10">
                     <p class="subtitle is-4">
                         <i class="fab fa-twitter fa-lg twitter m-r-20"></i><a href="#">Twitter</a>
                     </p>
                 </div>
                 
-                <div class="notification column is-two-fifths m-r-10">
+                <div class="column is-two-fifths m-r-10">
                     <p class="subtitle is-4">
-                        <i class="fab fa-facebook fa-lg  m-r-20"></i><a href="#">Facebook</a>
+                        <i class="fab fa-slack fa-lg  m-r-20 slack"></i><a href="#">Slack</a>
                     </p>
                 </div>
                 <div class="column is-one-third"></div>
             </div>
 
             <div class="columns is-mobile">
-                <div class="notification column is-two-fifths m-r-10">
+                <div class=" column is-two-fifths m-r-10">
                     <p class="subtitle is-4">
                         <i class="fab fa-discord fa-lg discord m-r-20"></i><a href="#">Discord</a>
                     </p>
                 </div>
                 
-                <div class="notification column is-two-fifths m-r-10">
+                <div class="column is-two-fifths m-r-10">
                     <p class="subtitle is-4">
                         <i class="fab fa-telegram fa-lg telegram m-r-20"></i><a href="#">Telegram</a>
                     </p>
