--- a/views/hirer/dashboard.ejs
+++ b/views/hirer/dashboard.ejs
@@ -14,12 +14,12 @@
 
                 <div class="tabs is-toggle is-centered m-t-30">
                     <ul>
-                        <li class="is-active">
+                        <li class="is-active" id="applications-tab">
                             <a>
                                 <span>❤️ Applications</span>
                             </a>
                         </li>
-                        <li>
+                        <li id="jobs-listed-tab">
                             <a>
                                 <span>📝 Jobs Listed</span>
                             </a>
@@ -27,58 +27,12 @@
                     </ul>
                 </div>
 
-                <div class="listing">
-                    <article class="media p-t-10 p-l-10">
-                        <div class="media-content">
-                            <div class="content">
-                                <p class="is-size-5">
-                                    <strong class="is-size-4"><span class="is-size-4">👩‍💻👨‍💻</span> Candidate Name</strong>
-                                    <br>
-                                    <strong>Job Applied For: </strong>
-                                    Javascript Developer
-                                    <span class="m-l-10 is-size-4">🗺</span>Location
-                                    <span class="m-l-10 is-size-4">💵</span> $30,000
-                                </p>
-                            </div>
-                            
-                            <nav class="level is-mobile is-pulled-right">
-                                <div class="level-left">
-                                    <p class="is-pulled-left button is-text m-r-10">Details</p>
-                                    <a class="level-item button is-link"><i class="fas fa-eye m-r-5"></i>View Profile</a>
-                                    <a class="level-item">
-                                        <span class="icon is-small"></i></span>
-                                    </a>
-                                </div>
-                            </nav>
-                        </div>
-                    </article>
-                </div><!-- application received-->
-
-                <div class="listing">
-                    <article class="media p-t-10 p-l-10">
-                        <div class="media-content">
-                            <div class="content">
-                                <p class="is-size-5">
-                                    <span class="is-size-4">👩‍💻👨‍💻</span>
-                                    <strong>Javascript Developer</strong>
-                                    <span class="m-l-10 is-size-4">🗺</span>Location
-                                    <span class="m-l-10 is-size-4">💵</span> $30,000
-                                </p>
-                            </div>
-                            
-                            <nav class="level is-mobile is-pulled-right">
-                                <div class="level-left">
-                                    <p class="is-pulled-left button is-text m-r-10">Details</p>
-                                    <a class="level-item button is-link"><i class="fas fa-edit m-r-5"></i>Edit</a>
-                                    <a class="level-item">
-                                        <span class="icon is-small"></i></span>
-                                    </a>
-                                </div>
-                            </nav>
-                        </div>
-                    </article>
-                </div><!-- job listing-->
-                
+                <div id="applications">
+                    <%- include('../inc/hirer/applications') %>
+                </div>
+                <div id="jobs-listed" style="display:none;">
+                    <%- include('../inc/hirer/jobs-listed') %>
+                </div>
             </div> <!-- first column-->
 
             <%- include('../inc/hirer-sidebar') %>
